force-app/main/default/objects/Sub_Market__c/fields/ALN_Market_Id__c.field-meta.xml
<CustomField>
    <fullName>ALN_Market_Id__c</fullName>
    <label>ALN Market Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>