force-app/main/default/objects/Sub_Market__c/fields/ALN_Sub_Market_Description__c.field-meta.xml
<CustomField>
    <fullName>ALN_Sub_Market_Description__c</fullName>
    <label>ALN Sub-Market Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>