force-app/main/default/objects/Sub_Market__c/fields/ALN_Sub_Market_Id__c.field-meta.xml
<CustomField>
    <fullName>ALN_Sub_Market_Id__c</fullName>
    <label>ALN Sub-Market Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>