force-app/main/default/objects/Sub_Market__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Sub-Markets</relationshipLabel>
    <relationshipName>Sub_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>